# ocompilers

./: .gitignore  OCompilers.sln
api-gateway/: .gitignore  CMakeLists.txt
api-gateway/include/: check_auth.hpp  config.hpp  error.hpp  safe_json.hpp  server.hpp  sessions.hpp
api-gateway/src/: base_session.cpp  check_auth.cpp  config.cpp  http_session.cpp  main.cpp  preflight_session.cpp  safe_json.cpp  server.cpp  websocket_session.cpp
auth-microservice/: AuthMicroservice.csproj  Program.cs
auth-microservice/Controllers/: AuthController.cs
auth-microservice/Interfaces/: ILogin.cs  IRegister.cs  ITokenPayload.cs
auth-microservice/Services/: AuthService.cs  JwtService.cs  PasswordService.cs
cpp-compiler-microservice/: Program.cs
cpp-compiler-microservice/Controllers/: CompilerController.cs
cpp-compiler-microservice/Interfaces/: IBuildMessage.cs  IFile.cs  IRuntimeMessage.cs
cpp-compiler-microservice/Services/: BuildService.cs  RuntimeService.cs
python-interpreter-microservice/: Program.cs  PythonInterpreterMicroservice.csproj
python-interpreter-microservice/Controllers/: InterpreterController.cs
python-interpreter-microservice/Interfaces/: IFile.cs  IRuntimeMessage.cs
python-interpreter-microservice/Services/: RuntimeService.cs
shared/: .gitignore  Shared.csproj
shared/Interfaces/: IError.cs
shared/Services/: ProcessService.cs
users-microservice/: .gitignore  Program.cs  UsersMicroservice.csproj
web/: package-lock.json  package.json
web/src/: App.scss  App.tsx  (+2 more)
workspace-microservice/: Program.cs  WorkspaceMicroservice.csproj
(+106 files in other folders)
